--- a/gb/ncid277_4.md
+++ b/gb/ncid277_4.md
@@ -1,18 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780767.md#1" target="_blank">黄耀明悼念大卫?鲍伊 宣布达明一派3月开唱</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780767.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/yaominhuang_meitu_1-150x120.jpg" align ="left"></a>1月8日，香港歌手黄耀明在facebook（fb）发文，悼念英国已故摇滚巨星大卫·鲍伊（David Bowie ）73岁冥诞，同时宣布，他与刘以达组成的“达明一派”将于3月27日在香港举行演唱会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 9:33 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780860.md#1" target="_blank">辽宁公安厅官落马 曾被举报当涉黑保护伞</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780860.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/yaowei-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共辽宁省公安厅刑事犯罪案件侦查局前局长姚伟日前“涉嫌严重违纪违法”被查。姚伟曾担任鞍山市公安局副局长、市委政法委副书记多年，曾被举报是涉黑“保护伞”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780506.md#1" target="_blank">中南海大秘：中共高层心灰意懒 出工不出力</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780506.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1211290826301497-150x120.jpg" align ="left"></a>中共内外交困，高层权斗不止之际，中南海一名大秘透露，习近平周围聚集了一帮庸才，而中共其他有能力高官个个心灰意懒，出工不出力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780385.md#1" target="_blank">【新闻看点】王立强爆遭威胁 台大选狂澜骤起</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/505fa504a8ce10df481ea24386519d34-150x120.jpg" align ="left"></a>中共间谍王立强日前惊爆受到威胁利诱，今天（1月9日）上午，国民党和民进党先后都召开了记者会，分别对这件事作出回应。在选情激烈、蓝绿两极分化的敏感时间点，这件事把台湾大选几乎推到了爆点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 6:44 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780581.md#1" target="_blank">46秒影片催人泪下 杜汶泽吁台湾人珍惜投票权</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780581.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/duwenze_meitu_1-150x120.jpg" align ="left"></a>一直支持香港逆权运动的艺人杜汶泽，9日在facebook（fb）贴出一只46秒的视频。短片中，他以沉重的语气介绍自己“是一个没有投票权的香港人”，并羡慕直呼：“亲爱的台湾，你知道你幸福吗？”他呼吁台湾人“珍惜民主”，“1月11日回家投票”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 6:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780639.md#1" target="_blank">【专访】台北议员苗博雅：大选预测及中共渗透（上）</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780639.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/PO_X6757-150x120.jpg" align ="left"></a>知名政论节目评论员、同时也是台北市议员的苗博雅接受《世界十字路口》的频道专访，针对这次台湾大选进行分析预测，并进一步析论当前中、港、台关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 5:34 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780549.md#1" target="_blank">【热点互动】伊朗放空枪 川普得分 中共失望？</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780549.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e84dc0d3ff3a1f_ttl7dayXRQ_d6bf7f46d8ae2758-150x120.jpg" align ="left"></a>周三（1月8日）凌晨，伊朗向2处伊拉克美军基地发射多枚导弹。美东周三上午11:30，川普总统发表讲话，表示美军没有人员伤亡。川普称将持续对伊朗的经济制裁并呼吁盟友合作重谈伊朗核协议。美伊冲突是否暂告一段落？局势演变对中共有何影响？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 5:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11771208.md#1" target="_blank">李子柒背后的“中国故事”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/6/n11771208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2-2-150x120.png" align ="left"></a>大陆网红李子柒近期因受到中共党媒的热捧，引发外界广泛关注。那么，中共为何要热捧李子柒？“李子柒现象”的背后又有着怎样的中国故事？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 5:12 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780408.md#1" target="_blank">骆惠宁见深圳四高层和林郑 泄中共对港政策</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f41989f5a44e476e5aa1b3efc4fa0e1f-150x120.jpg" align ="left"></a>刚刚履新的香港中联办主任骆惠宁，会见中共深圳四大班子高层后，又会见了香港特首林郑月娥。
-分析认为，这显示骆正在执行中共当局对香港的政策：进一步“止暴制乱”，加速香港与大陆城市的融合。香港今后的局势走向如何，引外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777696.md#1" target="_blank">美专家：北京可能成为台湾选举大输家</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777696.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e0efaae6822ba9c1df1384a9ad1ea6d0-150x120.jpg" align ="left"></a>“掰掰北京。”关注台湾选举情势的美国专家说，如果目前对蔡英文总统可能连任的预测正确，北京将成为这个周末台湾总统选举的“大输家”，美国也将获得一个“绝佳机会” （golden opportunity）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 12:50 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780211.md#1" target="_blank">前北约秘书长：台湾大选是中共资讯战演习场</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_Par7976987-150x120.jpg" align ="left"></a>前北约秘书长拉斯穆森表示，台湾开放的媒体环境为假新闻提供了肥沃土壤，让这次总统大选成了中共资讯战演习场地。台湾是对抗独裁的下一道防线，因此帮助台湾改善媒体环境就是在保护西方民主。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 12:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780032.md#1" target="_blank">刘鹤13日赴美签协议 环时叫嚷“不着急签”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11780032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/74eee1c6df7db3c9403970bf6c9f81d5-150x120.jpg" align ="left"></a>中共官方9日宣布，刘鹤将于本月13日到访美国，并签署第一阶段经贸协议。但就在前三天，中共官媒还叫嚣不着急签。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 11:47 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779813.md#1" target="_blank">中共犯下反人类罪 美国会报告促制裁</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg" align ="left"></a>美国国会一份报告呼吁对侵犯人权行为的中共进行制裁。并要求美国官员在与北京打交道时，包在括贸易谈判中，应将对人权的关注牢记在心。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 10:12 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779685.md#1" target="_blank">退休一年 武汉公安局前副局长被调查</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779685.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/96bbf07e6ed5792133f073abf0d5b9b5-150x120.jpg" align ="left"></a>中共湖北武汉市公安局前党委副书记、副局长刘菊生被调查，且被采取留置措施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 10:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778360.md#1" target="_blank">【翻墙必看】两神秘人对王立强发死亡威胁</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11778360.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/019-11-2811.32-600x400-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
@@ -38,6 +24,29 @@
 
 2.周晓辉：习近平警告王沪宁 断舍离是根本
 中共中央政治局常务委员会在当日全天召开了会议，听取中共全国人大常委会、国务院、全国政协、最高法院、最高检察院党组工作汇.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 9:20 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775580.md#1" target="_blank">蓬佩奥回应中联办换人 “北京应履行承诺”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775580.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NI8Y9-150x120.jpg" align ="left"></a>1月4日，中共宣布撤换香港中联办主任。周二（1月7日），美国国务卿蓬佩奥对媒体表示，已获知中联办换人的事情，并重申希望北京履行《中英联合声明》中对香港做出的承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 1:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775929.md#1" target="_blank">王志民被撤换 分析：内部或突发意外事件</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775929.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20180423-LC-Poon-17_gray-600x400-150x120.jpg" align ="left"></a>香港中联办主任王志民已被免职，由从未有港澳工作经验的前山西省委书记骆惠宁接任。有港媒报导，此安排十分仓卒，有可能是王志民本人或中联办内部发生了某种意外的突发事件，北京才突然宣布换人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 1:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11776083.md#1" target="_blank">中共央视前主持人芮成钢近况被曝光</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11776083.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1409140826272039-150x120.jpg" align ="left"></a>中共央视前主持人芮成钢已从公众视野消失多年，近日其有关情况被曝光——目前在监狱里服刑，将于年底刑满释放。
+
+近日有网民在微博发文称芮成钢目前在监狱里服刑，负责其他犯人的所谓“思想教育”工作。网民还晒出其喜欢的豪车，称他被查后，豪车一直停在路边无人开，已落满灰尘。
+
+多家海外中文媒体报导称，芮成钢现在对监狱里面的生活很适应，2020年底的时候将会刑满释.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 12:56 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775885.md#1" target="_blank">陕西前书记赵正永和前副省长陈国强被逮捕</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/377162-2-600x400-1-150x120.jpg" align ="left"></a>1月8日，中共全国人大前内务司法委员会副主任委员、陕西省委前书记赵正永及陕西省政府前副省长陈国强被逮捕。陈国强被指是赵正永的“大管家”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 11:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775780.md#1" target="_blank">【十字路口】台湾大选登场 牵动中港台未来</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11775780.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e7c23ab57a623c_ttl7dayJBD_20200108-____-DJY-150x120.jpg" align ="left"></a>2020年台湾大选将在本周六（1月11日）登场，超过1930万选民将用手中选票决定下一任中华民国总统。这次选举不但在台湾社会引爆激烈选战，并吸引国际社会高度瞩目，超过200位外籍记者来到台湾观选；加上美中贸易战、香港反送中运动、中共介选等因素的交互作用，让这次大选更显得复杂难辨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 10:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775622.md#1" target="_blank">十天内第二起 中国男子闯佛州海军禁区被捕</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/F-5N_VFC-111_NAS_Key_West-150x120.jpg" align ="left"></a>两名中国公民被控非法闯入美国佛州海军基地禁区及拍照，这是十天内中国公民擅闯该禁区的第二起案件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775057.md#1" target="_blank">遭中共封杀后事业转向 黄秋生开办生命训练营</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775057.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/1595687cfee0c8cb_ttl7daywuR_DSC_8147-01-150x120.jpeg" align ="left"></a>因支持香港雨伞运动遭中共封杀的艺人黄秋生，近年将工作重点转向舞台剧及开班教戏。7日晚，他在社交网站贴出一张宣传海报，上方用大字体写着“Acting In Reality”，下面落款“All The World’s A Stage 2-Day Life Coaching Camp”，署名导师就是他自己。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11774897.md#1" target="_blank">跑官买官卖官 广西防城港原公安局长被双开</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11774897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/yushi-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>中共广西民族宗教事务委员会前党组成员、副主任玉石近日被“双开”并移送司法。玉石被指跑官买官卖官，大搞权钱交易等。玉石曾担任广西防城港市公安局局长、市“610”副组长、市委政法委书记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775117.md#1" target="_blank">【新闻看点】美伊激烈冲突背后的中共因素</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775117.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191131537-150x120.jpg" align ="left"></a>美伊关系倏然升温，高度激化，而中共批评美国的“冒险”行为加剧区域紧张。多方认为，中共的内心是希望美伊开战的。只要美伊发生冲突，它就可以坐收渔人之利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775078.md#1" target="_blank">【新闻看点】美再出新招：限制AI等技术出口</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/GettyImages-1055941042-150x120.jpg" align ="left"></a>美国政府推出了“人工智能准则”，除了在美国国内推广人工智能，也将在国际上对抗极权国家利用人工智能压迫本国人民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 5:51 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775026.md#1" target="_blank">美推行业准则 对抗中共用人工智能压迫人民</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11775026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NI2EQ-150x120.jpg" align ="left"></a>2020年1月7号，美国政府推出《人工智能准则》，除了在美国国内推广人工智能，也将在国际上对抗中共等极权国家利用人工智能压迫本国人民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11774966.md#1" target="_blank">南海争端再起 印尼动员渔民对抗中国船只</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11774966.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/GettyImages-630829504-150x120.jpg" align ="left"></a>在大批中国渔船以及海警船进入印尼专属经济区后，印尼总统佐科·维多多周一罕见地在声明中措辞强烈地说：“涉及我们的主权时，没有谈判的余地。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 12:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11773877.md#1" target="_blank">【翻墙必看】骆惠宁见记者 腿不停颤抖</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/7/n11773877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled1-1-1-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.【新闻看点】习突换人 骆惠宁记者会为何颤抖
+新年伊始，中共官场爆出了第一个轰动性的消息。王志民卷铺盖走人了，骆惠宁1月6日正式出任香港中联办主任一职。对骆惠宁来说，从封疆大吏转任香港，压力应该是不小，以至于他在会见媒体时神情紧张，双腿不停颤抖。
+
+2.疑遭导师压榨 南邮研究生自焚亡 消息被封
+南京邮电大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 9:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779418.md#1" target="_blank">中共文艺界多名官员被查 1人为女歌手</a><br></h3>近年来，中共文艺界暗箱操作、利益交换等丑闻频被曝光。过去的2019年，中共文艺界有多名官员被调查或被处分。其中还包括一名女歌手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/9/n11779070.md#1" target="_blank">黑龙江前市委书记曾畏罪潜逃 逃跑路线曝光</a><br></h3>中共黑龙江省宁安市前市委书记程鹏曾畏罪潜逃。在失踪的两个多月里，其藏在哈尔滨、三亚、北京和辽宁之间。近日其出庭受审。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月09日 6:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11776605.md#1" target="_blank">中国传媒大学前副校长被双开 曾被指性侵女生</a><br></h3>1月8日，中国传媒大学前党委常委、副校长蔡翔因“严重违纪违法问题”被立案审查调查及被双开。其被指与他人长期保持不正当性关系。此前，蔡翔被举报性侵女学生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 4:49 PM							</td></tr>
