--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank">卖假笔记本电脑电池 美华人或坐牢50年</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b7798355ec5646f32805f38dbb8e96f0-150x120.jpg" align ="left"></a>美国司法部两天内密集刊出三条起诉中国产假货的公告，当事人涉嫌通过电子商务平台、直接对美国的消费者进行售卖。假货类别覆盖科技产品，如笔记本电脑电池，也有常见的流行饰品，如珠宝或太阳镜，甚至还有减肥以及男性伟哥类产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910180847022188-150x120.jpg" align ="left"></a>12月25日，以李小龙女儿Shannon Lee（中文名：李香凝）为法人代表的李小龙有限责任公司（Bruce Lee Enterprises, LLC），向上海市第二中级法院提起侵权诉讼，向使用酷似李小龙形象图标长达15年的大陆餐饮品牌“真功夫”索赔2.1亿元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 4:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank">蔡英文：台湾忧中共渗透 反渗透法不是戒严</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X7847-150x120.jpg" align ="left"></a>立法院民进党团预计在12月31日的院会上，拼“反渗透法”三读通过。总统蔡英文25日在总统候选人政见发表会提到，像反渗透法这样的立法，许多民主国家已经在做，“把反渗透法当作戒严，北京会欣慰，但国际社会将觉得不可思议。”她也说，若不认同该法案的立法，应提出具体的说明，“不应只有空洞的形容词。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank">江苏银行免费为储户磨刀 次日活动竟被取消</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-457504892-150x120.jpg" align ="left"></a>“银行门还没开，一帮人手里都拎着一把刀具，跃跃欲试地盯着门里面……”，这并非是电影中抢劫银行的片段，而是无锡市一家银行愿为储户免费磨刀，在发出邀请后即将上演的场景。但时隔不久，这项活动突然被叫停。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank">中共不可靠 布拉格市长：与其打交道应三思</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X6508-150x120.jpg" align ="left"></a>捷克首都布拉格市长贺瑞普（Zdeněk H?ib）反对中共对台湾的“一中条款”，并取消与北京姐妹市的关系，改与台北缔结姐妹市。贺瑞普在近日投书美国媒体，提到他从与中共的外交关系中学到两件事情，而他也得出一项结论，“中共是不可靠的商业伙伴，也是一个充满怨恨的群体。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743273.md#1" target="_blank">中国多地禁过圣诞 藉历史宣传“仇恨”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/24/n11743273.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-1-1-150x120.jpg" align ="left"></a>随着西方最大的传统节日——圣诞节的到来，西方国家都洋溢着节日的气氛。然而中国则是另一番景象，各地纷纷发文件，禁止公共场所过洋节，有的更要学习八国联军入侵历史，借机宣传“仇恨”和“耻辱”，而家庭教会也遭遇比去年更加严厉的控制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:44 AM							</td></tr>
@@ -22,12 +19,15 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank">民主党弹劾川普 或反助其成功连任</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737690.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/08/9A6A7260_e-150x120.jpg" align ="left"></a>美国股市上周不受众议院通过弹劾川普（特朗普）总统案的影响，三大股指气势如虹，市场人士普遍认为川普连任总统几无悬念。美国选民为何再给川普主掌白宫的机会？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 7:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank">陆童星培训藏陷阱 试镜背后是数万培训费</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737465.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-494964966-150x120.jpg" align ="left"></a>“15万就白扔了，这件事情绝对是我这辈子办得最憋屈、最丢脸的事情了。”安安妈妈一提起在女儿小时候偶遇“星探”，进而交培训费的经历，就懊悔不已。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank">天然气太贵民众偷烧煤 中共官员强行封灶台</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7d45b3c9a3db24ea4013d87bd3eac9a9-150x120.jpg" align ="left"></a>为减少空污，中国华北地区近年强推煤改气、煤改电，禁止冬季燃煤取暖。但因为天然气、电费过高，一些民众仍偷偷烧煤，使得近日官民冲突升高，甚至有村干部强行进入民宅用水泥封死灶台。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 10:33 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744043.md#1" target="_blank">每日三退声明精选（2019/12/24）</a><br></h3>出国旅游，国外的民主自由，中国的欺骗谎言，形成鲜明对比，声明退出少先队、共青团、共产党一切组织，不做它的牺牲品！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank">【货币市场】 美股创历史最高 美元强势</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11737087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/money-notes-150x120.jpg" align ="left"></a>在货币市场周五（美东时间12月20日）北美交易时段，美元展现强势，美元分别对日元、英镑和欧元升值。美元彭博现货指数收于 97.69点，高于一周前的收盘指数97.172点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank">“自干五”花千芳替母养老维权 遭网民嘲讽</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11736392.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/440dce5aeac66d14adcc65a38bf15914-600x400-1-150x120.jpg" align ="left"></a>对花千芳在网上维权吐槽，大陆独立时评人士张起表示，他不会同情花千芳，“对于花千芳这样的人，更多的是看他的笑话，很少有怜悯的心，因为他用网红的社会地位和社会身份仍然在帮他的母亲做努力。他在微博上第二个帖子里说的3点包含很多不堪的算计，他委婉提出要求几十万的赔偿，因为我网红的地位和名人效应，我跟小老百姓不一样，可以给辽宁省带来很多麻烦，不解决问题还可以持续闹，这.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:25 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank">高校频爆丑闻 清华被曝出骗子北大出流氓</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11736172.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zgzj-150x120.jpg" align ="left"></a>清华、北大是大陆最顶尖的学府，但仅在今年以来，这两所大学的丑闻频发。多名清华EMBA毕业生被曝涉嫌诈骗，而北大几名教师涉嫌性丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 11:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank">网爆汪峰朋友圈发文截图 宣布章子怡平安产子</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/20/n11735699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/GettyImages-1145305822-150x120.jpg" align ="left"></a>20日晚，陆媒搜狐网晒出汪峰在朋友圈发文的截图，上面写着：“宝宝已顺利出生，母子平安，辛苦老婆了！”宣布章子怡产子喜讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/25/n11744025.md#1" target="_blank">每日三退声明精选（2019/12/23）</a><br></h3>我从国内大量反人性的现实中认识到，无神论罪大恶极，中共才是最大的邪教，我声明自愿退出曾经入过的少先队，与之彻底决裂，争取光明的未来！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/22/n11737991.md#1" target="_blank">每日三退声明精选（2019/12/21）</a><br></h3>我因为在去年P2P的金融灾难中，已经倾家荡产，无法生活。那位诈骗犯逃到美国一年多了，我们向各级政府反映问题，要求惩办诈骗犯。结果政府和黑警却抓捕、殴打、恐吓、关押维权的受害者，我们过着生不如死的日子，天下之大怎么就没有说理的地方呢？在反思过程中终于醒悟，我们全国3.2亿的金融灾民被诈骗的原因就是我们太相信政府和大裤衩的新闻，以至于我们误判了国内的经济状况，其.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 11:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/21/n11736910.md#1" target="_blank">工作人员在陕西兵马俑坑内洒水引网友热议</a><br></h3>近日,大陆网络上流传出多名工作人员在陕西秦始皇兵马俑景区内洒水，许多网友质疑是破坏文物。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 4:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/qgedzr297/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qgedzr297/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
